--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
+application/config/database.php
 */config/development
-!*/application/config/database.php
 */logs/log-*.php
 !*/logs/index.html
 */cache/*
